Added route "shops by product"
